syntax = "proto3";
package elys.oracle;

option go_package = "github.com/elys-network/elys/v5/x/oracle/types";

message BandPriceCallData {
  repeated string symbols = 1;
  uint64 multiplier = 2;
}

message BandPriceResult { repeated uint64 rates = 1; }
